--- a/todo
+++ b/todo
@@ -1,5 +1,6 @@
 [DONE] sistemare quando list following, list users e wallet restituiscono un campo vuoto
-concorrenza nelle race condition, vedi file
+[DONE] concorrenza nelle race condition, vedi file
 [DONE] rate restituisce failure anche se va a buon fine
 le coordinate per il multicast vengono inviate dopo il login
 testare le modifiche a le funzioni wallet e walletbtc
+testare il codice dopo l'aggiunta della sincronizzazione
