--- a/todo
+++ b/todo
@@ -4,3 +4,5 @@
 le coordinate per il multicast vengono inviate dopo il login
 testare le modifiche a le funzioni wallet e walletbtc
 testare il codice dopo l'aggiunta della sincronizzazione
+parentesi wallet btc
+sistemare help lato client
